// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/CustomElementModal with description 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      description="best element ever"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
          />
        </svg>
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      className="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-describedby="generated-id-help"
                        className="euiFieldText canvasCustomElementForm__name euiFieldText--compressed"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    40 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <textarea
                    aria-describedby="generated-id-help"
                    className="euiTextArea euiTextArea--resizeVertical"
                    id="generated-id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    rows={2}
                    value="best element ever"
                  />
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    83 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFilePicker euiFilePicker--compressed canvasImageUpload"
                  >
                    <div
                      className="euiFilePicker__wrap"
                    >
                      <input
                        accept="image/*"
                        className="euiFilePicker__input"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        type="file"
                      />
                      <div
                        className="euiFilePicker__prompt"
                      >
                        <svg
                          aria-hidden="true"
                          className="euiIcon euiIcon--medium euiFilePicker__icon"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                          />
                        </svg>
                        <div
                          className="euiFilePicker__promptText"
                        >
                          Select or drag and drop an image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                >
                  <span
                    className="euiCard__top"
                  >
                    <svg
                      className="euiIcon euiIcon--xxLarge euiIcon--app euiCard__icon"
                      focusable="false"
                      height="32"
                      style={null}
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="euiIcon__fillSecondary"
                        d="M7 17h2v7H7zM12 14h2v10h-2zM17 16h2v8h-2zM22 14h3v2h-3zM22 18h3v2h-3zM22 22h3v2h-3z"
                      />
                      <path
                        d="M30.73 24a6.47 6.47 0 0 1 .45-2.19c.337-.9.52-1.85.54-2.81a8.55 8.55 0 0 0-.54-2.81 6.47 6.47 0 0 1-.45-2.19 9.2 9.2 0 0 1 .62-2.49c.53-1.57 1.08-3.19.08-4.2-1-1.01-2.41-.44-3.52.05a5.59 5.59 0 0 1-2.09.64 5.3 5.3 0 0 1-.59 0L16 .28 6.77 8a5.3 5.3 0 0 1-.59 0 5.59 5.59 0 0 1-2.09-.65C3 6.87 1.6 6.25.57 7.31c-1.03 1.06-.45 2.63.08 4.2A9.2 9.2 0 0 1 1.27 14a6.47 6.47 0 0 1-.45 2.19A8.55 8.55 0 0 0 .28 19c.02.96.203 1.91.54 2.81A6.47 6.47 0 0 1 1.27 24a9.2 9.2 0 0 1-.62 2.49c-.53 1.57-1.08 3.19-.08 4.2.353.38.852.59 1.37.58a5.67 5.67 0 0 0 2.15-.63A5.59 5.59 0 0 1 6.18 30a7.13 7.13 0 0 1 2.29.47 8 8 0 0 0 2.62.53 7.37 7.37 0 0 0 2.47-.51A7.14 7.14 0 0 1 16 30a6.24 6.24 0 0 1 2.14.45 8 8 0 0 0 2.77.55 8.08 8.08 0 0 0 2.77-.55 6.24 6.24 0 0 1 2.14-.45 5.59 5.59 0 0 1 2.09.65c1.11.49 2.49 1.11 3.52.05 1.03-1.06.45-2.63-.08-4.2a9.2 9.2 0 0 1-.62-2.5zM21.17 7h-.26a8 8 0 0 0-2.77.55A6.24 6.24 0 0 1 16 8a6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 11.09 7h-.26L16 2.72 21.17 7zm8.89 22.27a4.42 4.42 0 0 1-1.34-.46 7.08 7.08 0 0 0-2.9-.82 8.14 8.14 0 0 0-2.78.55 6.13 6.13 0 0 1-2.13.45 6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 16 28a9 9 0 0 0-3.08.6 5.74 5.74 0 0 1-1.83.4 6.36 6.36 0 0 1-2-.43A8.72 8.72 0 0 0 6.18 28a7.08 7.08 0 0 0-2.9.82 9.65 9.65 0 0 1-1.28.52 6.08 6.08 0 0 1 .52-2.21c.403-1 .65-2.055.73-3.13a8.55 8.55 0 0 0-.54-2.81A6.47 6.47 0 0 1 2.27 19a6.47 6.47 0 0 1 .44-2.19c.337-.9.52-1.85.54-2.81a10.48 10.48 0 0 0-.72-3.13 9 9 0 0 1-.59-2.16H2c.447.1.88.255 1.29.46a7.08 7.08 0 0 0 2.9.82A8.14 8.14 0 0 0 9 9.44 6.13 6.13 0 0 1 11.09 9a6.13 6.13 0 0 1 2.13.45A8.14 8.14 0 0 0 16 10a8.14 8.14 0 0 0 2.78-.55A6.13 6.13 0 0 1 20.91 9a6.13 6.13 0 0 1 2.09.44 8.14 8.14 0 0 0 2.78.55 7.08 7.08 0 0 0 2.9-.82A9.65 9.65 0 0 1 30 8.66a6.08 6.08 0 0 1-.52 2.21c-.403 1-.65 2.055-.73 3.13.02.96.203 1.91.54 2.81a6.47 6.47 0 0 1 .44 2.19 6.47 6.47 0 0 1-.44 2.19 8.55 8.55 0 0 0-.54 2.81c.078 1.074.32 2.13.72 3.13a9 9 0 0 1 .59 2.16v-.02z"
                      />
                    </svg>
                  </span>
                  <span
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--medium euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        best element ever
                      </p>
                    </div>
                  </span>
                  <span
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/CustomElementModal with image 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      image="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmlld0JveD0iMCAwIDI3MC42MDAwMSAyNjkuNTQ2NjYiCiAgIGhlaWdodD0iMjY5LjU0NjY2IgogICB3aWR0aD0iMjcwLjYwMDAxIgogICB4bWw6c3BhY2U9InByZXNlcnZlIgogICBpZD0ic3ZnMiIKICAgdmVyc2lvbj0iMS4xIj48bWV0YWRhdGEKICAgICBpZD0ibWV0YWRhdGE4Ij48cmRmOlJERj48Y2M6V29yawogICAgICAgICByZGY6YWJvdXQ9IiI+PGRjOmZvcm1hdD5pbWFnZS9zdmcreG1sPC9kYzpmb3JtYXQ+PGRjOnR5cGUKICAgICAgICAgICByZGY6cmVzb3VyY2U9Imh0dHA6Ly9wdXJsLm9yZy9kYy9kY21pdHlwZS9TdGlsbEltYWdlIiAvPjwvY2M6V29yaz48L3JkZjpSREY+PC9tZXRhZGF0YT48ZGVmcwogICAgIGlkPSJkZWZzNiIgLz48ZwogICAgIHRyYW5zZm9ybT0ibWF0cml4KDEuMzMzMzMzMywwLDAsLTEuMzMzMzMzMywwLDI2OS41NDY2NykiCiAgICAgaWQ9ImcxMCI+PGcKICAgICAgIHRyYW5zZm9ybT0ic2NhbGUoMC4xKSIKICAgICAgIGlkPSJnMTIiPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMTQiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNmZmZmZmY7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMjAyOS40OCw5NjIuNDQxIGMgMCwxNzAuMDk5IC0xMDUuNDYsMzE4Ljc5OSAtMjY0LjE3LDM3Ni42NTkgNi45OCwzNS44NiAxMC42Miw3MS43MSAxMC42MiwxMDkuMDUgMCwzMTYuMTkgLTI1Ny4yNCw1NzMuNDMgLTU3My40Nyw1NzMuNDMgLTE4NC43MiwwIC0zNTYuNTU4LC04OC41OSAtNDY0LjUzLC0yMzcuODUgLTUzLjA5LDQxLjE4IC0xMTguMjg1LDYzLjc1IC0xODYuMzA1LDYzLjc1IC0xNjcuODM2LDAgLTMwNC4zODMsLTEzNi41NCAtMzA0LjM4MywtMzA0LjM4IDAsLTM3LjA4IDYuNjE3LC03Mi41OCAxOS4wMzEsLTEwNi4wOCBDIDEwOC40ODgsMTM4MC4wOSAwLDEyMjcuODkgMCwxMDU4Ljg4IDAsODg3LjkxIDEwNS45NzcsNzM4LjUzOSAyNjUuMzk4LDY4MS4wOSBjIC02Ljc2OSwtMzUuNDQyIC0xMC40NiwtNzIuMDIgLTEwLjQ2LC0xMDkgQyAyNTQuOTM4LDI1Ni42MjEgNTExLjU2NiwwIDgyNy4wMjcsMCAxMDEyLjIsMCAxMTgzLjk0LDg4Ljk0MTQgMTI5MS4zLDIzOC44MzIgYyA1My40NSwtNDEuOTYxIDExOC44LC02NC45OTIgMTg2LjU2LC02NC45OTIgMTY3LjgzLDAgMzA0LjM4LDEzNi40OTIgMzA0LjM4LDMwNC4zMzIgMCwzNy4wNzggLTYuNjIsNzIuNjI5IC0xOS4wMywxMDYuMTI5IDE1Ny43OCw1Ni44NzkgMjY2LjI3LDIwOS4xMjkgMjY2LjI3LDM3OC4xNCIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDE2IgogICAgICAgICBzdHlsZT0iZmlsbDojZmFjZjA5O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDc5Ny44OTgsMTE1MC45MyA0NDQuMDcyLC0yMDIuNDUgNDQ4LjA1LDM5Mi41OCBjIDYuNDksMzIuMzkgOS42Niw2NC42NyA5LjY2LDk4LjQ2IDAsMjc2LjIzIC0yMjQuNjgsNTAwLjk1IC01MDAuOSw1MDAuOTUgLTE2NS4yNCwwIC0zMTkuMzcsLTgxLjM2IC00MTMuMDUzLC0yMTcuNzkgbCAtNzQuNTI0LC0zODYuNjQgODYuNjk1LC0xODUuMTEiIC8+PHBhdGgKICAgICAgICAgaWQ9InBhdGgxOCIKICAgICAgICAgc3R5bGU9ImZpbGw6IzQ5YzFhZTtmaWxsLW9wYWNpdHk6MTtmaWxsLXJ1bGU6bm9uemVybztzdHJva2U6bm9uZSIKICAgICAgICAgZD0ibSAzMzguMjIzLDY4MC42NzIgYyAtNi40ODksLTMyLjM4MyAtOS44MDksLTY1Ljk4MSAtOS44MDksLTk5Ljk3MyAwLC0yNzYuOTI5IDIyNS4zMzYsLTUwMi4yNTc2IDUwMi4zMTMsLTUwMi4yNTc2IDE2Ni41OTMsMCAzMjEuNDczLDgyLjExNzYgNDE1LjAxMywyMTkuOTQ5NiBsIDczLjk3LDM4NS4zNDcgLTk4LjcyLDE4OC42MjEgTCA3NzUuMTU2LDEwNzUuNTcgMzM4LjIyMyw2ODAuNjcyIiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjAiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNlZjI5OWI7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMzM1LjQxLDE0NDkuMTggMzA0LjMzMiwtNzEuODYgNjYuNjgsMzQ2LjAyIGMgLTQxLjU4NiwzMS43OCAtOTIuOTMsNDkuMTggLTE0NS43MzEsNDkuMTggLTEzMi4yNSwwIC0yMzkuODEyLC0xMDcuNjEgLTIzOS44MTIsLTIzOS44NyAwLC0yOS4yMSA0Ljg3OSwtNTcuMjIgMTQuNTMxLC04My40NyIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDIyIgogICAgICAgICBzdHlsZT0iZmlsbDojNGNhYmU0O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJNIDMwOC45OTIsMTM3Ni43IEMgMTczLjAyLDEzMzEuNjQgNzguNDgwNSwxMjAxLjMgNzguNDgwNSwxMDU3LjkzIDc4LjQ4MDUsOTE4LjM0IDE2NC44Miw3OTMuNjggMjk0LjQwNiw3NDQuMzUyIGwgNDI2Ljk4MSwzODUuOTM4IC03OC4zOTUsMTY3LjUxIC0zMzQsNzguOSIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDI0IgogICAgICAgICBzdHlsZT0iZmlsbDojODVjZTI2O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDEzMjMuOCwyOTguNDEgYyA0MS43NCwtMzIuMDkgOTIuODMsLTQ5LjU5IDE0NC45OCwtNDkuNTkgMTMyLjI1LDAgMjM5LjgxLDEwNy41NTkgMjM5LjgxLDIzOS44MjEgMCwyOS4xNiAtNC44OCw1Ny4xNjggLTE0LjUzLDgzLjQxOCBsIC0zMDQuMDgsNzEuMTYgLTY2LjE4LC0zNDQuODA5IiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjYiCiAgICAgICAgIHN0eWxlPSJmaWxsOiMzMTc3YTc7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMTM4NS42Nyw3MjIuOTMgMzM0Ljc2LC03OC4zMDEgYyAxMzYuMDIsNDQuOTYxIDIzMC41NiwxNzUuMzUxIDIzMC41NiwzMTguNzYyIDAsMTM5LjMzOSAtODYuNTQsMjYzLjg1OSAtMjE2LjM4LDMxMy4wMzkgbCAtNDM3Ljg0LC0zODMuNTkgODguOSwtMTY5LjkxIiAvPjwvZz48L2c+PC9zdmc+"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
          />
        </svg>
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      className="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-describedby="generated-id-help"
                        className="euiFieldText canvasCustomElementForm__name euiFieldText--compressed"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    40 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <textarea
                    aria-describedby="generated-id-help"
                    className="euiTextArea euiTextArea--resizeVertical"
                    id="generated-id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    rows={2}
                    value=""
                  />
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    100 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFilePicker euiFilePicker--compressed canvasImageUpload"
                  >
                    <div
                      className="euiFilePicker__wrap"
                    >
                      <input
                        accept="image/*"
                        className="euiFilePicker__input"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        type="file"
                      />
                      <div
                        className="euiFilePicker__prompt"
                      >
                        <svg
                          aria-hidden="true"
                          className="euiIcon euiIcon--medium euiFilePicker__icon"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                          />
                        </svg>
                        <div
                          className="euiFilePicker__promptText"
                        >
                          Select or drag and drop an image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned canvasElementCard"
                >
                  <span
                    className="euiCard__top"
                  >
                    <img
                      alt=""
                      className="euiCard__image"
                      src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmlld0JveD0iMCAwIDI3MC42MDAwMSAyNjkuNTQ2NjYiCiAgIGhlaWdodD0iMjY5LjU0NjY2IgogICB3aWR0aD0iMjcwLjYwMDAxIgogICB4bWw6c3BhY2U9InByZXNlcnZlIgogICBpZD0ic3ZnMiIKICAgdmVyc2lvbj0iMS4xIj48bWV0YWRhdGEKICAgICBpZD0ibWV0YWRhdGE4Ij48cmRmOlJERj48Y2M6V29yawogICAgICAgICByZGY6YWJvdXQ9IiI+PGRjOmZvcm1hdD5pbWFnZS9zdmcreG1sPC9kYzpmb3JtYXQ+PGRjOnR5cGUKICAgICAgICAgICByZGY6cmVzb3VyY2U9Imh0dHA6Ly9wdXJsLm9yZy9kYy9kY21pdHlwZS9TdGlsbEltYWdlIiAvPjwvY2M6V29yaz48L3JkZjpSREY+PC9tZXRhZGF0YT48ZGVmcwogICAgIGlkPSJkZWZzNiIgLz48ZwogICAgIHRyYW5zZm9ybT0ibWF0cml4KDEuMzMzMzMzMywwLDAsLTEuMzMzMzMzMywwLDI2OS41NDY2NykiCiAgICAgaWQ9ImcxMCI+PGcKICAgICAgIHRyYW5zZm9ybT0ic2NhbGUoMC4xKSIKICAgICAgIGlkPSJnMTIiPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMTQiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNmZmZmZmY7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMjAyOS40OCw5NjIuNDQxIGMgMCwxNzAuMDk5IC0xMDUuNDYsMzE4Ljc5OSAtMjY0LjE3LDM3Ni42NTkgNi45OCwzNS44NiAxMC42Miw3MS43MSAxMC42MiwxMDkuMDUgMCwzMTYuMTkgLTI1Ny4yNCw1NzMuNDMgLTU3My40Nyw1NzMuNDMgLTE4NC43MiwwIC0zNTYuNTU4LC04OC41OSAtNDY0LjUzLC0yMzcuODUgLTUzLjA5LDQxLjE4IC0xMTguMjg1LDYzLjc1IC0xODYuMzA1LDYzLjc1IC0xNjcuODM2LDAgLTMwNC4zODMsLTEzNi41NCAtMzA0LjM4MywtMzA0LjM4IDAsLTM3LjA4IDYuNjE3LC03Mi41OCAxOS4wMzEsLTEwNi4wOCBDIDEwOC40ODgsMTM4MC4wOSAwLDEyMjcuODkgMCwxMDU4Ljg4IDAsODg3LjkxIDEwNS45NzcsNzM4LjUzOSAyNjUuMzk4LDY4MS4wOSBjIC02Ljc2OSwtMzUuNDQyIC0xMC40NiwtNzIuMDIgLTEwLjQ2LC0xMDkgQyAyNTQuOTM4LDI1Ni42MjEgNTExLjU2NiwwIDgyNy4wMjcsMCAxMDEyLjIsMCAxMTgzLjk0LDg4Ljk0MTQgMTI5MS4zLDIzOC44MzIgYyA1My40NSwtNDEuOTYxIDExOC44LC02NC45OTIgMTg2LjU2LC02NC45OTIgMTY3LjgzLDAgMzA0LjM4LDEzNi40OTIgMzA0LjM4LDMwNC4zMzIgMCwzNy4wNzggLTYuNjIsNzIuNjI5IC0xOS4wMywxMDYuMTI5IDE1Ny43OCw1Ni44NzkgMjY2LjI3LDIwOS4xMjkgMjY2LjI3LDM3OC4xNCIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDE2IgogICAgICAgICBzdHlsZT0iZmlsbDojZmFjZjA5O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDc5Ny44OTgsMTE1MC45MyA0NDQuMDcyLC0yMDIuNDUgNDQ4LjA1LDM5Mi41OCBjIDYuNDksMzIuMzkgOS42Niw2NC42NyA5LjY2LDk4LjQ2IDAsMjc2LjIzIC0yMjQuNjgsNTAwLjk1IC01MDAuOSw1MDAuOTUgLTE2NS4yNCwwIC0zMTkuMzcsLTgxLjM2IC00MTMuMDUzLC0yMTcuNzkgbCAtNzQuNTI0LC0zODYuNjQgODYuNjk1LC0xODUuMTEiIC8+PHBhdGgKICAgICAgICAgaWQ9InBhdGgxOCIKICAgICAgICAgc3R5bGU9ImZpbGw6IzQ5YzFhZTtmaWxsLW9wYWNpdHk6MTtmaWxsLXJ1bGU6bm9uemVybztzdHJva2U6bm9uZSIKICAgICAgICAgZD0ibSAzMzguMjIzLDY4MC42NzIgYyAtNi40ODksLTMyLjM4MyAtOS44MDksLTY1Ljk4MSAtOS44MDksLTk5Ljk3MyAwLC0yNzYuOTI5IDIyNS4zMzYsLTUwMi4yNTc2IDUwMi4zMTMsLTUwMi4yNTc2IDE2Ni41OTMsMCAzMjEuNDczLDgyLjExNzYgNDE1LjAxMywyMTkuOTQ5NiBsIDczLjk3LDM4NS4zNDcgLTk4LjcyLDE4OC42MjEgTCA3NzUuMTU2LDEwNzUuNTcgMzM4LjIyMyw2ODAuNjcyIiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjAiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNlZjI5OWI7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMzM1LjQxLDE0NDkuMTggMzA0LjMzMiwtNzEuODYgNjYuNjgsMzQ2LjAyIGMgLTQxLjU4NiwzMS43OCAtOTIuOTMsNDkuMTggLTE0NS43MzEsNDkuMTggLTEzMi4yNSwwIC0yMzkuODEyLC0xMDcuNjEgLTIzOS44MTIsLTIzOS44NyAwLC0yOS4yMSA0Ljg3OSwtNTcuMjIgMTQuNTMxLC04My40NyIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDIyIgogICAgICAgICBzdHlsZT0iZmlsbDojNGNhYmU0O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJNIDMwOC45OTIsMTM3Ni43IEMgMTczLjAyLDEzMzEuNjQgNzguNDgwNSwxMjAxLjMgNzguNDgwNSwxMDU3LjkzIDc4LjQ4MDUsOTE4LjM0IDE2NC44Miw3OTMuNjggMjk0LjQwNiw3NDQuMzUyIGwgNDI2Ljk4MSwzODUuOTM4IC03OC4zOTUsMTY3LjUxIC0zMzQsNzguOSIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDI0IgogICAgICAgICBzdHlsZT0iZmlsbDojODVjZTI2O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDEzMjMuOCwyOTguNDEgYyA0MS43NCwtMzIuMDkgOTIuODMsLTQ5LjU5IDE0NC45OCwtNDkuNTkgMTMyLjI1LDAgMjM5LjgxLDEwNy41NTkgMjM5LjgxLDIzOS44MjEgMCwyOS4xNiAtNC44OCw1Ny4xNjggLTE0LjUzLDgzLjQxOCBsIC0zMDQuMDgsNzEuMTYgLTY2LjE4LC0zNDQuODA5IiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjYiCiAgICAgICAgIHN0eWxlPSJmaWxsOiMzMTc3YTc7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMTM4NS42Nyw3MjIuOTMgMzM0Ljc2LC03OC4zMDEgYyAxMzYuMDIsNDQuOTYxIDIzMC41NiwxNzUuMzUxIDIzMC41NiwzMTguNzYyIDAsMTM5LjMzOSAtODYuNTQsMjYzLjg1OSAtMjE2LjM4LDMxMy4wMzkgbCAtNDM3Ljg0LC0zODMuNTkgODguOSwtMTY5LjkxIiAvPjwvZz48L2c+PC9zdmc+"
                    />
                  </span>
                  <span
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--medium euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </span>
                  <span
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/CustomElementModal with name 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      description=""
      name="My Chart"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
          />
        </svg>
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      className="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-describedby="generated-id-help"
                        className="euiFieldText canvasCustomElementForm__name euiFieldText--compressed"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={true}
                        type="text"
                        value="My Chart"
                      />
                    </div>
                  </div>
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    32 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <textarea
                    aria-describedby="generated-id-help"
                    className="euiTextArea euiTextArea--resizeVertical"
                    id="generated-id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    rows={2}
                    value=""
                  />
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    100 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFilePicker euiFilePicker--compressed canvasImageUpload"
                  >
                    <div
                      className="euiFilePicker__wrap"
                    >
                      <input
                        accept="image/*"
                        className="euiFilePicker__input"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        type="file"
                      />
                      <div
                        className="euiFilePicker__prompt"
                      >
                        <svg
                          aria-hidden="true"
                          className="euiIcon euiIcon--medium euiFilePicker__icon"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                          />
                        </svg>
                        <div
                          className="euiFilePicker__promptText"
                        >
                          Select or drag and drop an image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                >
                  <span
                    className="euiCard__top"
                  >
                    <svg
                      className="euiIcon euiIcon--xxLarge euiIcon--app euiCard__icon"
                      focusable="false"
                      height="32"
                      style={null}
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="euiIcon__fillSecondary"
                        d="M7 17h2v7H7zM12 14h2v10h-2zM17 16h2v8h-2zM22 14h3v2h-3zM22 18h3v2h-3zM22 22h3v2h-3z"
                      />
                      <path
                        d="M30.73 24a6.47 6.47 0 0 1 .45-2.19c.337-.9.52-1.85.54-2.81a8.55 8.55 0 0 0-.54-2.81 6.47 6.47 0 0 1-.45-2.19 9.2 9.2 0 0 1 .62-2.49c.53-1.57 1.08-3.19.08-4.2-1-1.01-2.41-.44-3.52.05a5.59 5.59 0 0 1-2.09.64 5.3 5.3 0 0 1-.59 0L16 .28 6.77 8a5.3 5.3 0 0 1-.59 0 5.59 5.59 0 0 1-2.09-.65C3 6.87 1.6 6.25.57 7.31c-1.03 1.06-.45 2.63.08 4.2A9.2 9.2 0 0 1 1.27 14a6.47 6.47 0 0 1-.45 2.19A8.55 8.55 0 0 0 .28 19c.02.96.203 1.91.54 2.81A6.47 6.47 0 0 1 1.27 24a9.2 9.2 0 0 1-.62 2.49c-.53 1.57-1.08 3.19-.08 4.2.353.38.852.59 1.37.58a5.67 5.67 0 0 0 2.15-.63A5.59 5.59 0 0 1 6.18 30a7.13 7.13 0 0 1 2.29.47 8 8 0 0 0 2.62.53 7.37 7.37 0 0 0 2.47-.51A7.14 7.14 0 0 1 16 30a6.24 6.24 0 0 1 2.14.45 8 8 0 0 0 2.77.55 8.08 8.08 0 0 0 2.77-.55 6.24 6.24 0 0 1 2.14-.45 5.59 5.59 0 0 1 2.09.65c1.11.49 2.49 1.11 3.52.05 1.03-1.06.45-2.63-.08-4.2a9.2 9.2 0 0 1-.62-2.5zM21.17 7h-.26a8 8 0 0 0-2.77.55A6.24 6.24 0 0 1 16 8a6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 11.09 7h-.26L16 2.72 21.17 7zm8.89 22.27a4.42 4.42 0 0 1-1.34-.46 7.08 7.08 0 0 0-2.9-.82 8.14 8.14 0 0 0-2.78.55 6.13 6.13 0 0 1-2.13.45 6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 16 28a9 9 0 0 0-3.08.6 5.74 5.74 0 0 1-1.83.4 6.36 6.36 0 0 1-2-.43A8.72 8.72 0 0 0 6.18 28a7.08 7.08 0 0 0-2.9.82 9.65 9.65 0 0 1-1.28.52 6.08 6.08 0 0 1 .52-2.21c.403-1 .65-2.055.73-3.13a8.55 8.55 0 0 0-.54-2.81A6.47 6.47 0 0 1 2.27 19a6.47 6.47 0 0 1 .44-2.19c.337-.9.52-1.85.54-2.81a10.48 10.48 0 0 0-.72-3.13 9 9 0 0 1-.59-2.16H2c.447.1.88.255 1.29.46a7.08 7.08 0 0 0 2.9.82A8.14 8.14 0 0 0 9 9.44 6.13 6.13 0 0 1 11.09 9a6.13 6.13 0 0 1 2.13.45A8.14 8.14 0 0 0 16 10a8.14 8.14 0 0 0 2.78-.55A6.13 6.13 0 0 1 20.91 9a6.13 6.13 0 0 1 2.09.44 8.14 8.14 0 0 0 2.78.55 7.08 7.08 0 0 0 2.9-.82A9.65 9.65 0 0 1 30 8.66a6.08 6.08 0 0 1-.52 2.21c-.403 1-.65 2.055-.73 3.13.02.96.203 1.91.54 2.81a6.47 6.47 0 0 1 .44 2.19 6.47 6.47 0 0 1-.44 2.19 8.55 8.55 0 0 0-.54 2.81c.078 1.074.32 2.13.72 3.13a9 9 0 0 1 .59 2.16v-.02z"
                      />
                    </svg>
                  </span>
                  <span
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--medium euiCard__title"
                      id="generated-idTitle"
                    >
                      My Chart
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </span>
                  <span
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/CustomElementModal with title 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
          />
        </svg>
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Create new element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      className="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-describedby="generated-id-help"
                        className="euiFieldText canvasCustomElementForm__name euiFieldText--compressed"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={true}
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    40 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <textarea
                    aria-describedby="generated-id-help"
                    className="euiTextArea euiTextArea--resizeVertical"
                    id="generated-id"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    rows={2}
                    value=""
                  />
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    100 characters remaining
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div>
                    <label
                      className="euiFormLabel"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFilePicker euiFilePicker--compressed canvasImageUpload"
                  >
                    <div
                      className="euiFilePicker__wrap"
                    >
                      <input
                        accept="image/*"
                        className="euiFilePicker__input"
                        id="generated-id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                        onFocus={[Function]}
                        type="file"
                      />
                      <div
                        className="euiFilePicker__prompt"
                      >
                        <svg
                          aria-hidden="true"
                          className="euiIcon euiIcon--medium euiFilePicker__icon"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                          />
                        </svg>
                        <div
                          className="euiFilePicker__promptText"
                        >
                          Select or drag and drop an image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                >
                  <span
                    className="euiCard__top"
                  >
                    <svg
                      className="euiIcon euiIcon--xxLarge euiIcon--app euiCard__icon"
                      focusable="false"
                      height="32"
                      style={null}
                      viewBox="0 0 32 32"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="euiIcon__fillSecondary"
                        d="M7 17h2v7H7zM12 14h2v10h-2zM17 16h2v8h-2zM22 14h3v2h-3zM22 18h3v2h-3zM22 22h3v2h-3z"
                      />
                      <path
                        d="M30.73 24a6.47 6.47 0 0 1 .45-2.19c.337-.9.52-1.85.54-2.81a8.55 8.55 0 0 0-.54-2.81 6.47 6.47 0 0 1-.45-2.19 9.2 9.2 0 0 1 .62-2.49c.53-1.57 1.08-3.19.08-4.2-1-1.01-2.41-.44-3.52.05a5.59 5.59 0 0 1-2.09.64 5.3 5.3 0 0 1-.59 0L16 .28 6.77 8a5.3 5.3 0 0 1-.59 0 5.59 5.59 0 0 1-2.09-.65C3 6.87 1.6 6.25.57 7.31c-1.03 1.06-.45 2.63.08 4.2A9.2 9.2 0 0 1 1.27 14a6.47 6.47 0 0 1-.45 2.19A8.55 8.55 0 0 0 .28 19c.02.96.203 1.91.54 2.81A6.47 6.47 0 0 1 1.27 24a9.2 9.2 0 0 1-.62 2.49c-.53 1.57-1.08 3.19-.08 4.2.353.38.852.59 1.37.58a5.67 5.67 0 0 0 2.15-.63A5.59 5.59 0 0 1 6.18 30a7.13 7.13 0 0 1 2.29.47 8 8 0 0 0 2.62.53 7.37 7.37 0 0 0 2.47-.51A7.14 7.14 0 0 1 16 30a6.24 6.24 0 0 1 2.14.45 8 8 0 0 0 2.77.55 8.08 8.08 0 0 0 2.77-.55 6.24 6.24 0 0 1 2.14-.45 5.59 5.59 0 0 1 2.09.65c1.11.49 2.49 1.11 3.52.05 1.03-1.06.45-2.63-.08-4.2a9.2 9.2 0 0 1-.62-2.5zM21.17 7h-.26a8 8 0 0 0-2.77.55A6.24 6.24 0 0 1 16 8a6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 11.09 7h-.26L16 2.72 21.17 7zm8.89 22.27a4.42 4.42 0 0 1-1.34-.46 7.08 7.08 0 0 0-2.9-.82 8.14 8.14 0 0 0-2.78.55 6.13 6.13 0 0 1-2.13.45 6.24 6.24 0 0 1-2.14-.45A8 8 0 0 0 16 28a9 9 0 0 0-3.08.6 5.74 5.74 0 0 1-1.83.4 6.36 6.36 0 0 1-2-.43A8.72 8.72 0 0 0 6.18 28a7.08 7.08 0 0 0-2.9.82 9.65 9.65 0 0 1-1.28.52 6.08 6.08 0 0 1 .52-2.21c.403-1 .65-2.055.73-3.13a8.55 8.55 0 0 0-.54-2.81A6.47 6.47 0 0 1 2.27 19a6.47 6.47 0 0 1 .44-2.19c.337-.9.52-1.85.54-2.81a10.48 10.48 0 0 0-.72-3.13 9 9 0 0 1-.59-2.16H2c.447.1.88.255 1.29.46a7.08 7.08 0 0 0 2.9.82A8.14 8.14 0 0 0 9 9.44 6.13 6.13 0 0 1 11.09 9a6.13 6.13 0 0 1 2.13.45A8.14 8.14 0 0 0 16 10a8.14 8.14 0 0 0 2.78-.55A6.13 6.13 0 0 1 20.91 9a6.13 6.13 0 0 1 2.09.44 8.14 8.14 0 0 0 2.78.55 7.08 7.08 0 0 0 2.9-.82A9.65 9.65 0 0 1 30 8.66a6.08 6.08 0 0 1-.52 2.21c-.403 1-.65 2.055-.73 3.13.02.96.203 1.91.54 2.81a6.47 6.47 0 0 1 .44 2.19 6.47 6.47 0 0 1-.44 2.19 8.55 8.55 0 0 0-.54 2.81c.078 1.074.32 2.13.72 3.13a9 9 0 0 1 .59 2.16v-.02z"
                      />
                    </svg>
                  </span>
                  <span
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--medium euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </span>
                  <span
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;
